--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 # Set here configurations for the database connection
 
 # Connection url for the database "mycontact"
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=spring
+spring.datasource.url=jdbc:sqlserver://118.68.168.26;databaseName=spring
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # MySQL username and password 
@@ -36,7 +36,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # Naming strategy
-spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
